improve test output, simplify code, update readme. ready to go?

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   "keywords": [],
   "version": "0.0.1",
   "devDependencies": {
-    "icedfrisby": "^0.3.X",
-    "istanbul": "^0.4.X",
-    "joi": "^10.0.X",
-    "tslint": "^4.1.X",
     "bootstrap": "^3.3.X",
+    "bunyan": "^1.8.5",
     "d3": "^4.2.X",
-    "jquery": "^3.1.X"
+    "icedfrisby": "^0.3.X",
+    "istanbul": "^0.4.5",
+    "joi": "^10.0.X",
+    "jquery": "^3.1.X",
+    "mocha": "^3.2.0",
+    "tslint": "^4.1.X"
   },
   "scripts": {
     "clean": "rm -rf ./node_modules/",
