--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
   "keywords": [],
   "version": "0.2.0",
   "devDependencies": {
-    "bootstrap": "^3.3.X",
     "bunyan": "^1.8.5",
-    "d3": "^4.2.X",
     "icedfrisby": "^0.3.X",
-    "istanbul": "^0.4.5",
     "joi": "^10.0.X",
     "mocha": "^3.2.0",
     "tslint": "^4.1.X"
@@ -26,8 +23,8 @@
     "configurewin": "yarn install",
     "build": "tsc",
     "test": "mocha -c  --timeout 15000 -R mochawesome",
-    "cover": "istanbul cover _mocha -- --timeout 30000",
-    "coverwin": "istanbul cover node_modules/mocha/bin/_mocha",
+    "cover": "nyc -r json yarn run test",
+    "coverwin": "nyc -r json yarn run test",
     "start": "node src/App.js"
   },
   "dependencies": {
@@ -42,6 +39,7 @@
     "jszip": "^3.1.2",
     "mocha": "^3.2.0",
     "mochawesome": "^1.5.2",
+    "nyc": "^10.0.0",
     "parse5": "^3.0.1",
     "request": "^2.79.0",
     "request-promise-native": "^1.0.3",
