--- a/package.json
+++ b/package.json
@@ -10,22 +10,17 @@
   "keywords": [],
   "version": "0.2.0",
   "devDependencies": {
-    "bunyan": "^1.8.5",
-    "icedfrisby": "^0.3.X",
-    "joi": "^10.0.X",
-    "mocha": "^3.2.0",
-    "tslint": "^4.1.X"
   },
   "scripts": {
-    "clean": "rm -rf ./node_modules/",
-    "cleanwin": "rmdir node_modules /s /q & exit 0",
+    "clean": "rm -rf ./node_modules/ .yarnclean",
+    "cleanwin": "rmdir node_modules .yarnclean /s /q & exit 0",
     "configure": "yarn install",
     "configurewin": "yarn install",
     "build": "tsc",
-    "test": "mocha -c --timeout 10000 -R mochawesome",
-    "testcover": "mocha -c --timeout 10000",
-    "cover": "nyc -r json-summary --reporter=lcov yarn run testcover",
-    "coverwin": "nyc -r json-summary --reporter=lcov yarn run testcover",
+    "test": "mocha --timeout 10000 -R list",
+    "testcover": "mocha --timeout 10000",
+    "cover": "nyc -r json-summary -r lcov yarn run testcover",
+    "coverwin": "nyc -r json-summary -r lcov yarn run testcover",
     "start": "node src/App.js"
   },
   "dependencies": {
@@ -35,16 +30,14 @@
     "@types/mocha": "^2.2.33",
     "@types/node": "^6.0.52",
     "@types/parse5": "^2.2.34",
-    "@types/restify": "^2.0.35",
+    "@types/restify": "^2.0.X",
     "chai": "^3.5.0",
-    "jszip": "^3.1.2",
-    "mocha": "^3.2.0",
-    "mochawesome": "^1.5.2",
+    "chai-as-promised": "^6.0.0",
     "nyc": "^10.0.0",
-    "parse5": "^3.0.1",
+    "mocha": "^3.2.0",
+    "restify": "^4.3.X",
     "request": "^2.79.0",
-    "request-promise-native": "^1.0.3",
-    "restify": "^4.0.3",
+    "ts-node": "^2.0.0",
     "typescript": "^2.1.X"
   }
 }
