--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^6.0.52",
     "@types/parse5": "^2.2.34",
     "@types/restify": "^2.0.X",
+    "jszip": "^3.1.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
     "nyc": "^10.0.0",
