--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,10 @@
     "noImplicitAny": true,
     "removeComments": true,
     "preserveConstEnums": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "typeRoots": [
+      "./node_modules/@types"
+    ]
   },
   "filesGlob": [
     "/src/**/*.ts",
