--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "bugs": "",
   "keywords": [],
   "version": "0.2.0",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "clean": "rm -rf ./node_modules/ .yarnclean",
     "cleanwin": "rmdir node_modules .yarnclean /s /q & exit 0",
@@ -25,19 +24,20 @@
   },
   "dependencies": {
     "@types/chai": "^3.4.34",
-    "@types/core-js": "^0.9.35",
-    "@types/jszip": "0.0.31",
+    "@types/jszip": "0.0.32",
     "@types/mocha": "^2.2.33",
+    "@types/core-js": "^0.9.35",
     "@types/node": "^6.0.52",
     "@types/parse5": "^2.2.34",
     "@types/restify": "^2.0.X",
-    "jszip": "^3.1.3",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "nyc": "^10.0.0",
+    "jszip": "^3.1.3",
     "mocha": "^3.2.0",
-    "restify": "^4.3.X",
+    "nyc": "^10.0.0",
+    "parse5": "^3.0.1",
     "request": "^2.79.0",
+    "restify": "^4.3.X",
     "ts-node": "^2.0.0",
     "typescript": "^2.1.X"
   }
